will switch pie chart colors for a softer shade and fix h3 spacing

--- a/src/components/css/styles.css
+++ b/src/components/css/styles.css
@@ -116,7 +116,7 @@ h4 {
 }
 
 .tabTitle {
-  margin: 50px 15px;
+  margin: 20px 15px;
   font-weight: bolder;
   font-size: 30px;
 }
